@@ -1,2 +1,2 @@
-(fn json-encode (x)  (json_encode x))
-(fn json-decode (x)  (json_decode x t))
+(fn json-encode (x)  (json_encode_obj x))
+(fn json-decode (x)  (json_decode x))
