@@ -1,17 +1,17 @@
 (fn properties-alist (x)
-  (@ [. _ (%aref x _)] (property-names x)))
+  (@ [. _ (slot-value x _)] (property-names x)))
 
 (fn alist-properties (x)
   (& x
      (aprog1 (new)
-       (@ [=-%aref ._ ! _.] x))))
+       (@ [= (slot-value ! _.) ._] x))))
 
 (fn merge-properties (a b)
   (aprog1 (new)
     (@ (i (property-names a))
-      (=-%aref (%aref a i) ! i))
+      (= (slot-value ! i) (slot-value a i)))
     (@ (i (property-names b))
-      (=-%aref (%aref b i) ! i))))
+      (= (slot-value ! i) (slot-value b i)))))
 
 (fn copy-properties (x)
   (merge-properties x nil))
