@@ -1,0 +1,4 @@
+function json_encode_obj ($x)
+{
+    return json_encode ((array) $x);
+}
