@@ -1,5 +1,3 @@
 (fn property-names (x)
   (& x
-     (array-list (array_keys (? (object? x)
-                                (get_object_vars x)
-                                x)))))
+     (array-list (array_keys (get_object_vars x)))))
